@@ -2,6 +2,7 @@ v4.6.0 (2021.08.xx)
   - Update SQLite database engine to version 3.36.0
   - Update cURL library to version 7.78.0
   - Fix bug causing full refresh of guide data during startup if there are 'Unknown' channels in the lineup
+  - Fix bug causing the static PVR connection string 'api.hdhomerun.com' to not appear in the Kodi 'PVR info' overlay
   - Add reporting of Live TV tuner signal status information
   - Add new "Disable reporting of active Live TV tuner signal status" Interface option
 
